--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,3 +8,23 @@
 div {
   border: 1px solid black;
 }
+/*=====================Footer===========================*/
+#footer {
+  height: 80vw;
+  width: 100%;
+  margin-top: 10%;
+  text-align: center;
+}
+#foot_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#f_cont1 {
+  width: 40%;
+  height: 70vw;
+}
+.f_conts {
+  height: 70vw;
+  width: 20%;
+}
