--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,6 +6,65 @@
   scroll-snap-stop: always;
 }
 div {
-  border: 1px solid black;
+  border: 1px solid white;
 }
 /*=====================Footer===========================*/
+/*======Footer Section 1=========*/
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  margin-top: 10%;
+}
+/*=========Footer section 1============*/
+#f1_cont1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  font-size: 150%;
+  align-items: center;
+  height: 400px;
+}
+#f1_cont1 h2 {
+  font-size: 250%;
+}
+#f1_cont1_1 {
+  line-height: 250%;
+  width: 50%;
+}
+#f1_cont1_2 {
+  width: 40%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+#cont1_1 {
+  height: 100%;
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: white;
+  color: black;
+}
+
+#cont1_2 {
+  height: 100%;
+  width: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+#cont1_2 button {
+  height: 100%;
+  width: 100%;
+  background-color: #ed661f;
+  color: white;
+  font-size: 2vw;
+}
