--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,8 +15,13 @@ footer {
   color: white;
   text-align: center;
   margin-top: 10%;
+  margin-bottom: 10%;
 }
 /*=========Footer section 1============*/
+#f2_container {
+  width: 100%;
+  height: 90%;
+}
 #f1_cont1 {
   display: flex;
   flex-direction: column;
@@ -67,4 +72,61 @@ footer {
   background-color: #ed661f;
   color: white;
   font-size: 2vw;
+}
+
+/*===========footer 2===================*/
+#footer2 {
+  color: white;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+#f2_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+#f2_cont1 {
+  width: 40%;
+  height: 100%;
+}
+.f2_conts {
+  width: 30%;
+  height: 100%;
+}
+#f2_cont1 {
+  text-align: left;
+  padding-left: 2%;
+  line-height: 200%;
+  font-size: 150%;
+}
+#ft_icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  background-color: white;
+  border-radius: 50%;
+}
+.f2_conts {
+  height: 100%;
+  text-align: left;
+  padding-left: 5%;
+  font-size: 150%;
+  line-height: 200%;
+}
+.f2_conts h4 {
+  font-size: 180%;
+}
+#par1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  font-size: 150%;
+  font-weight: 600;
 }
