--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,20 +1,27 @@
 * {
-  margin: 0;
-  padding: 0;
   scroll-behavior: smooth;
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
 /*===================Main section 6(esteemed customers)=========================*/
 /*===================Main section 6(esteemed customers)=========================*/
-/*===================Main section 6(esteemed customers)=========================*/
+/*===================Main section 4(Most Popular)=========================*/
+#section4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 50vw;
+  margin-top: 6%;
+}
 /*===================Main section 5(Newest Items)=========================*/
 #section5 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   width: 100%;
-  height: 500px;
+  height: 50vw;
+  margin-top: 6%;
 }
 #sect5_cont {
   height: 90%;
@@ -57,7 +64,7 @@ footer {
   color: white;
   text-align: center;
   margin-top: 10%;
-  margin-bottom: 10%;
+  margin-bottom: 2%;
 }
 /*=========Footer section 1============*/
 #f2_container {
