--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -7,6 +7,40 @@ section div {
   border: 1px solid black;
 }
 /*===================Main section 1(intro)=========================*/
+#header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 10vw;
+  width: 100%;
+  margin-top: 3%;
+}
+#logo {
+  width: 10%;
+  height: 100%;
+}
+#head_info {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+#head_cred {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.h_info {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+/*===================Main section 1(intro)=========================*/
 #section1 {
   height: 35vw;
   width: 100%;
