--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -14,10 +14,16 @@ section div {
   height: 10vw;
   width: 100%;
   margin-top: 3%;
+  /*position: fixed;
+  top: -10%;*/
 }
 #logo {
   width: 10%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 #head_info {
   width: 60%;
@@ -32,6 +38,7 @@ section div {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
 }
 .h_info {
   width: 20%;
@@ -39,6 +46,9 @@ section div {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+.head_bt {
+  width: 50%;
 }
 /*===================Main section 1(intro)=========================*/
 #section1 {
