--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -96,6 +96,17 @@ section div {
   font-size: 1.6vw;
   line-height: 3vw;
   margin-top: 5%;
+  background-image: url(/resources/Assets/image_1.png);
+  background-size: contain;
+  display: flex;
+  flex-direction: row;
+}
+#sect1_img {
+  height: 100%;
+  width: 40%;
+  background-image: url(/resources/Assets/image_2.png);
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 #sect1_cont {
   width: 50%;
@@ -116,7 +127,7 @@ section div {
 }
 #sect1_info {
   padding-left: 10%;
-  height: 8%;
+  height: 13%;
   display: flex;
   flex-direction: column;
   justify-content: left;
@@ -126,6 +137,8 @@ section div {
   height: 100%;
   width: 34%;
   font-size: 1.6vw;
+  background-color: #ed661f;
+  color: white;
 }
 /*===================Main section 2(why we exist)=========================*/
 #section2 {
