--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -83,11 +83,13 @@ section div {
   background-color: #ed661f;
   color: white;
   font-weight: 600;
+  border: none;
 }
 .head_bt button {
   height: 100%;
   width: 100%;
   font-size: 1.5vw;
+  border: none;
 }
 /*===================Main section 1(intro)=========================*/
 #section1 {
@@ -139,6 +141,7 @@ section div {
   font-size: 1.6vw;
   background-color: #ed661f;
   color: white;
+  border: none;
 }
 /*===================Main section 2(why we exist)=========================*/
 #section2 {
@@ -155,18 +158,33 @@ section div {
   height: 100%;
 }
 #sect2_div1 {
-  width: 47%;
+  width: 50%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
+}
+#sect2_head {
+  margin-left: 10%;
+}
+#sect2_head strong {
+  text-decoration: underline;
+  text-decoration-color: #ed661f;
+  text-underline-position: under;
+  text-decoration-thickness: 4px;
 }
 #sect2_info {
   width: 80%;
   text-align: left;
+  margin-left: 10%;
 }
-
+#sect2_div2 {
+  height: 100%;
+  width: 50%;
+  background-image: url(/resources/Assets/image_3.png);
+  background-size: contain;
+}
 /*===================Main section 3(Products and categories)=========================*/
 #section3 {
   height: 10vw;
