--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -213,8 +213,17 @@ section div {
   flex-direction: column;
   justify-content: space-evenly;
   width: 100%;
-  height: 50vw;
+  height: 40vw;
   margin-top: 6%;
+}
+#sect5_header h3 {
+  font-size: 2vw;
+}
+#sect5_header strong {
+  text-decoration: underline;
+  text-decoration-color: #ed661f;
+  text-underline-position: under;
+  text-decoration-thickness: 20%;
 }
 /*===================Main section 5(Newest Items)=========================*/
 #section5 {
