--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -13,6 +13,10 @@ strong {
   text-underline-position: under;
   text-decoration-thickness: 20%;
 }
+main {
+  padding-left: 10%;
+  padding-right: 10%;
+}
 /*===================Main section 1(intro)=========================*/
 #header {
   display: flex;
@@ -275,7 +279,7 @@ strong {
   margin-top: 10%;
   display: flex;
   flex-direction: column;
-  height: 500px;
+  height: 40vw;
 }
 #sect6_head {
   margin-bottom: 2%;
