--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -299,6 +299,10 @@ main {
 .rating {
   height: 20%;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .opinion {
   height: 60%;
@@ -323,6 +327,7 @@ main {
   flex-direction: row;
   align-items: center;
 }
+
 /*=====================Footer===========================*/
 /*======Footer Section 1=========*/
 footer {
