--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -353,6 +353,40 @@ main {
   height: 100%;
   width: 70%;
 }
+#sect6_info1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 80%;
+  width: 17%;
+}
+#sect6_info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 80%;
+  width: 17%;
+  margin-top: 9%;
+}
+#sc6_info_par {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.6vw;
+  width: 70%;
+}
+#sc6_info_arrow {
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#arrow {
+  width: 100%;
+  height: 70%;
+}
 /*=====================Footer===========================*/
 /*======Footer Section 1=========*/
 footer {
