--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,9 +4,7 @@
   scroll-snap-stop: always;
   font-family: "Poppins", sans-serif;
 }
-section div {
-  border: 1px solid black;
-}
+
 strong {
   text-decoration: underline;
   text-decoration-color: #ed661f;
@@ -28,7 +26,7 @@ main {
   font-size: 1.5vw;
   background-color: black;
   /*position: fixed;
-  top: -10%;*/
+  top: -1%;*/
 }
 #logo {
   width: 10%;
@@ -125,7 +123,7 @@ main {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 }
 #sect1_header {
   padding-left: 10%;
@@ -162,6 +160,7 @@ main {
   margin-left: 25%;
   margin-top: -6.8%;
   background-color: white;
+  box-shadow: 0px 3px 10px grey;
 }
 .stat1 {
   display: flex;
