--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,6 +15,10 @@ main {
   padding-left: 10%;
   padding-right: 10%;
 }
+a {
+  text-decoration: none;
+  color: white;
+}
 /*===================Main section 1(intro)=========================*/
 #header {
   display: flex;
@@ -22,11 +26,10 @@ main {
   justify-content: space-between;
   height: 6vw;
   width: 100%;
-
+  margin-right: 0%;
+  margin-left: 0%;
   font-size: 1.5vw;
   background-color: black;
-  position: fixed;
-  top: 0;
 }
 #logo {
   width: 10%;
