--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -109,7 +109,7 @@ a {
   font-size: 1.6vw;
   line-height: 3vw;
   margin-top: 5%;
-  background-image: url(/resources/css/image_1.png);
+  background-image: url("/resources/css/image_1.png");
   background-size: contain;
   display: flex;
   flex-direction: row;
